--- a/tasks.yaml
+++ b/tasks.yaml
@@ -1,3 +1,8 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/defenseunicorns/maru-runner/main/tasks.schema.json
+includes:
+  - create: ./tasks/create.yaml
+  - deploy: ./tasks/deploy.yaml
+
 variables:
   - name: K8S_FLAVOR
     default: k3s
@@ -69,3 +74,26 @@ tasks:
           UDS_MODE=down uds run lab:up
         shell:
           linux: bash
+
+  - name: create-slim-base-bundle
+    actions:
+      - task: create:package
+        with:
+          path: packages/core-secrets
+          architecture: amd64
+      - task: create:bundle
+        with:
+          path: bundles/slim-base-bundle
+          architecture: amd64
+
+  - name: deploy-slim-base-bundle
+    inputs:
+      config_file_name:
+        description: File name relative to the value of the path input var to use for the uds-config file
+        default: uds-config.yaml
+    actions:
+      - task: deploy:deploy-bundle
+        with:
+          path: bundles/slim-base-bundle
+          config_file_name: ${{ .inputs.config_file_name }}
+          architecture: amd64
